# literature-flow-kit

./: .gitignore  AGENTS.md  README.md
automation/: README.md
automation/prompts/: literature-organizer.prompt.example.md
automation/runners/: run-literature-organizer.example.cjs
config/: codex-automation.example.toml  env.example  trae-mcp.example.json  workbuddy-mcp.example.json  workflow_config.example.json
docs/: codex-skill-automation-setup.md  configuration.md  setup.md  trae-work-setup.md  workbuddy-setup.md  workflow.md
examples/: paper_record.example.json
extra/: README.md
extra/knowledge-bases/: README.md
extra/knowledge-bases/notebooklm/: README.md  SKILL.md
extra/knowledge-bases/notion/: README.md  SKILL.md
extra/knowledge-bases/obsidian/: README.md  SKILL.md
extra/reference-managers/: README.md
extra/reference-managers/endnote/: README.md  SKILL.md
extra/reference-managers/endnote/mcp/: README.md  pyproject.toml
extra/reference-managers/endnote/mcp/src/endnote_write_mcp/: __init__.py  server.py
extra/reference-managers/jabref/: README.md  SKILL.md  bibtex-backend.example.json  bibtex-jabref-standard.md
integrations/zotero-mcp/: .env.example
integrations/zotero-mcp/mcp/: common_mcp.py  zotero_mcp_server.py
integrations/zotero-mcp/scripts/: smoke_mcp.py  zotero.py
scripts/: doctor.cjs
skills/ima-skill/: SKILL.md
skills/ima-skill/harness/: dedup_check.cjs  preflight.cjs  upload_pdf.cjs  verify_workflow.cjs
skills/literature-organizer/: SKILL.md
skills/zotero/: SKILL.md
(+4 files in other folders)
